--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+/.pnp
+.pnp.js
+
+# Build files
 dist
 dist-ssr
 *.local
+build
+
+# Testing
+/coverage
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +31,25 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase
+firebase/serviceAccountKey.json
+firebase-debug.log
+firebase-debug.*.log
+ui-debug.log
+.firebase/
+.firebaserc
+
+# Runtime data
+.cache/
+.parcel-cache/
+
+# Misc
+.eslintcache
