--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,12 +18,16 @@ jobs:
         node-version: '18'
 
     - name: Install dependencies
-      run: npm install --legacy-peer-deps
+      run: npm install
 
-    - name: Build project
-      run: npm run build
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
 
-    - name: Deploy to Vercel
-      env:
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-      run: vercel --prod --yes
+    - name: Pull Vercel Environment Information
+      run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+    - name: Build Project Artifacts
+      run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+    - name: Deploy Project Artifacts to Vercel
+      run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
